# Koopman

./: .gitignore  Big_Koopman_1.ipynb  Big_Koopman_2.ipynb  Koopman_ Duffing 1  Koopman_ Duffing 2  Koopman_ First Analytic Example 1  Koopman_ First Analytic Example 2  Koopman_ Second Analytic Example 1  Koopman_ Second Analytic Example 2  Koopman_1.ipynb  Koopman_2.ipynb  Koopman_3D_Gradient_System.ipynb  Koopman_Duffing_1.ipynb  Koopman_Duffing_2.ipynb  Koopman_First_Analytic_Example_1.ipynb  Koopman_First_Analytic_Example_2.ipynb  Koopman_Second_Analytic_Example_1.ipynb  Koopman_Second_Analytic_Example_2.ipynb  README.md  pyproject.toml
experiments/: Koopman_3D_Gradient_System.ipynb  Koopman_Duffing.ipynb  Koopman_First_Analytic_Example.ipynb  Koopman_Second_Analytic_Example.ipynb
scripts/: build_notebooks.py
src/koopman_hjb/: __init__.py  experiments.py  kernels.py  lyapunov.py  plotting.py  solver.py
tests/: test_smoke.py
