[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "koopman-hjb"
version = "0.1.0"
description = "Kernel collocation experiments for Koopman operator eigenfunctions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
notebooks = [
    "jupyterlab>=4.2",
    "nbformat>=5.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
